--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -16,23 +16,23 @@ Syntax error: Invalid CSS after "/*9px*/": expected selector or at-rule, was "{f
 
 Backtrace:
 /home/steve/Gems/noodall-ui/public/stylesheets/sass/typography.scss:15
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:900:in `expected'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:843:in `expected'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/scss/parser.rb:27:in `parse'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:319:in `_to_tree'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:291:in `_render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:239:in `render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/engine.rb:239:in `render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:175:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:173:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/haml-3.1.1/vendor/sass/lib/sass/../sass/plugin/rack.rb:51:in `call'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:898:in `expected'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:841:in `expected'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:27:in `parse'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:319:in `_to_tree'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:291:in `_render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `each'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
 /home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
 /home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/head.rb:14:in `call'
 /home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/methodoverride.rb:24:in `call'
