Tidying up versioning before ui clean up

--- a/public/stylesheets/admin/forms.css
+++ b/public/stylesheets/admin/forms.css
@@ -265,6 +265,16 @@ p.remove span{
           position:absolute;
 }
 
+#content form .fixed-form a#versions-button {
+          width:110px;
+          height:26px;
+          left:440px;
+          top:20px;
+          border: 1px solid red;
+          color: red;
+          position:absolute;
+          background: white;
+}
 #content form .fixed-form input.draft {
           background:url(/images/admin/draft.gif) no-repeat;
           width:110px;
@@ -276,6 +286,17 @@ p.remove span{
 
 }
 
+.fixed-form input#hide {
+          width:160px;
+          height:56px;
+          cursor:pointer;
+          border: 1px solid red;
+          color: red;
+          position:absolute;
+          background: white;
+          top:20px;
+          right:200px;
+}
 .fixed-form a.cancel, .fixed-form a.delete {
           background:url(/images/admin/cancel.gif) no-repeat;
           width:160px;
