--- a/app/views/noodall/admin/nodes/show.html.erb
+++ b/app/views/noodall/admin/nodes/show.html.erb
@@ -40,8 +40,9 @@
     <div id="buttons">
       <%= f.submit 'Publish', :class => 'publish', :name => 'node[publish]' if can_publish?(@node) %>
       <%= f.submit 'Draft', :name => "draft", :class => 'draft' %>
-      <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
       <%= link_to 'Versions', noodall_admin_node_versions_path(@node), :id => "versions-button" %>
+      <%= f.submit 'Hide', :name => 'node[hide]', :id => 'hide' %>
+      <%= link_to 'Cancel', @node.root? ? noodall_admin_nodes_path : noodall_admin_node_nodes_path(@node.parent), :class => 'cancel'  %>
     </div>
 
     <% if can_publish?(@node) %>
