--- a/public/stylesheets/admin/skin.css
+++ b/public/stylesheets/admin/skin.css
@@ -387,8 +387,8 @@ span.check {
         background:url(/images/admin/check.png) no-repeat -1px -4px;
 }
 
-span.draft {
-        background:url(/images/admin/draft.png) no-repeat -1px -4px;
+span.hidden {
+        background:url(/images/admin/hidden.png) no-repeat -1px -4px;
 }
 
 a.child, a.add{
@@ -628,7 +628,7 @@ a.page_down,
 a.show,
 a.add,
 span.check,
-span.draft,
+span.hidden,
 a.child,
 .form-save,
 .form-delete,
