--- a/public/stylesheets/admin/typography.css
+++ b/public/stylesheets/admin/typography.css
@@ -52,6 +52,8 @@ div.flash,
 #errorExplanation li,
 div#content-table table.content td,
 div#content-table table.content th,
+table#versions-list th,
+table#versions-list td,
 #tags h2,
 #info h2,
 #no-tags h2,
@@ -140,6 +142,7 @@ table td.file a,
 ul.choices li a,
 #tags a, div.tags a,
 div#content-table table.content th,
+table#versions-list th,
 .pagination,
 #no-tags a,
 label,
