new css for spam rows

--- a/public/stylesheets/admin/skin.css
+++ b/public/stylesheets/admin/skin.css
@@ -364,9 +364,15 @@ a.edit, span.edit {
 a.delete, span.delete {
         background:url(/images/admin/delete.png) no-repeat -1px -4px;
 }
+
 td.spam {
-        background:url(/images/admin/spam-flag.png) no-repeat -1px -4px;
+				text-align: right;
 }
+
+td.spam.flagged {
+				background:url(/images/admin/spam-flag.png) no-repeat 8px 8px;
+}
+
 a.download {
         background:url(/images/admin/download.png) no-repeat -1px -4px;
 }
@@ -407,9 +413,7 @@ a.page_up:hover,
 a.page_down:hover,
 a.child:hover,
 a.add:hover,
-a.download:hover,
-a.spam:hover
- {
+a.download:hover {
         background-position: -1px -36px;
 }
 
@@ -640,8 +644,7 @@ a.child,
 ul.choices li a,
 a.download,
 .edit-item,
-a.change,
-a.spam, span.spam {
+a.change {
         overflow: hidden;
         text-align: left;
         display: block;
