--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -1,6 +1,6 @@
 /*
 Syntax error: Invalid CSS after "/*9px*/": expected selector or at-rule, was "{font-size:0.9em;}"
-        on line 15 of /home/steve/Gems/noodall-ui/public/stylesheets/sass/typography.scss
+        on line 15 of /Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss
 
 10: }
 11: 
@@ -15,120 +15,71 @@ Syntax error: Invalid CSS after "/*9px*/": expected selector or at-rule, was "{f
 20: /* 11px */
 
 Backtrace:
-/home/steve/Gems/noodall-ui/public/stylesheets/sass/typography.scss:15
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:898:in `expected'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:841:in `expected'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:27:in `parse'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:319:in `_to_tree'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:291:in `_render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/sass-3.1.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/head.rb:14:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/methodoverride.rb:24:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/flash.rb:182:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/cookies.rb:302:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:46:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/activesupport-3.0.7/lib/active_support/callbacks.rb:416:in `_run_call_callbacks'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/sendfile.rb:107:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/show_exceptions.rb:47:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/railties-3.0.7/lib/rails/rack/logger.rb:13:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/runtime.rb:17:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/activesupport-3.0.7/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/dragonfly-0.7.7/lib/dragonfly/middleware.rb:16:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `synchronize'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/lock.rb:11:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/actionpack-3.0.7/lib/action_dispatch/middleware/static.rb:30:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/railties-3.0.7/lib/rails/application.rb:168:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:47:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:41:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-1.2.2/lib/rack/urlmap.rb:41:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/mock_session.rb:30:in `request'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/test.rb:209:in `process_request'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/rack-test-0.5.7/lib/rack/test.rb:57:in `get'
-(__FORWARDABLE__):3:in `__send__'
-(__FORWARDABLE__):3:in `get'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:259:in `get'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:206:in `send'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:206:in `process'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/driver/rack_test_driver.rb:200:in `visit'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/session.rb:135:in `visit'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/capybara-0.4.1.2/lib/capybara/dsl.rb:104:in `visit'
-/home/steve/Gems/noodall-ui/features/step_definitions/pubish_content_steps.rb:40
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:48:in `instance_exec'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:48:in `cucumber_instance_exec'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:69:in `cucumber_run_with_backtrace_filtering'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/core_ext/instance_exec.rb:36:in `cucumber_instance_exec'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/rb_support/rb_step_definition.rb:62:in `invoke'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/step_match.rb:26:in `invoke'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_invocation.rb:63:in `invoke'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_invocation.rb:42:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:99:in `visit_step'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:98:in `visit_step'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:15:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:14:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/step_collection.rb:14:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:93:in `visit_steps'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:92:in `visit_steps'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:53:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:79:in `with_hooks'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:95:in `before_and_after'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:78:in `with_hooks'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:115:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:115:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:13:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:95:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:95:in `execute_around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/language_support/language_methods.rb:12:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:114:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:112:in `call'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime/support_code.rb:112:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:90:in `around'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:77:in `with_hooks'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:51:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:106:in `with_visitor'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/scenario.rb:45:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:51:in `visit_feature_element'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:50:in `visit_feature_element'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:40:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:39:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/feature.rb:39:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:20:in `visit_feature'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:19:in `visit_feature'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:29:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:17:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:17:in `each'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/features.rb:28:in `accept'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:14:in `visit_features'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:164:in `broadcast'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/ast/tree_walker.rb:13:in `visit_features'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/runtime.rb:45:in `run!'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/cli/main.rb:43:in `execute!'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/../lib/cucumber/cli/main.rb:20:in `execute'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/gems/cucumber-0.10.2/bin/cucumber:14
-/home/steve/.rvm/gems/ruby-1.8.7-p330/bin/cucumber:19:in `load'
-/home/steve/.rvm/gems/ruby-1.8.7-p330/bin/cucumber:19
+/Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss:15
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:898:in `expected'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:841:in `expected'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:27:in `parse'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:319:in `_to_tree'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:291:in `_render'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `each'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `each'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
+/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/head.rb:14:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/methodoverride.rb:24:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/flash.rb:182:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/cookies.rb:295:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:46:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/activesupport-3.0.3/lib/active_support/callbacks.rb:415:in `_run_call_callbacks'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/sendfile.rb:107:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/show_exceptions.rb:46:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/rack/logger.rb:13:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/runtime.rb:17:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/activesupport-3.0.3/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/dragonfly-0.7.7/lib/dragonfly/middleware.rb:16:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `synchronize'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/static.rb:30:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:168:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:77:in `send'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:77:in `method_missing'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/rack/log_tailer.rb:14:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/content_length.rb:13:in `call'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/handler/webrick.rb:52:in `service'
+/opt/local/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
+/opt/local/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
+/opt/local/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
+/opt/local/lib/ruby/1.8/webrick/server.rb:162:in `start'
+/opt/local/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
+/opt/local/lib/ruby/1.8/webrick/server.rb:95:in `start'
+/opt/local/lib/ruby/1.8/webrick/server.rb:92:in `each'
+/opt/local/lib/ruby/1.8/webrick/server.rb:92:in `start'
+/opt/local/lib/ruby/1.8/webrick/server.rb:23:in `start'
+/opt/local/lib/ruby/1.8/webrick/server.rb:82:in `start'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/handler/webrick.rb:13:in `run'
+/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/server.rb:213:in `start'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands/server.rb:65:in `start'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:30
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:27:in `tap'
+/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:27
+script/rails:6:in `require'
+script/rails:6
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Syntax error: Invalid CSS after \"/*9px*/\": expected selector or at-rule, was \"{font-size:0.9em;}\"\A         on line 15 of /home/steve/Gems/noodall-ui/public/stylesheets/sass/typography.scss\A \A 10: }\A 11: \A 12: /* -------------- FONT SIZES -------------- */\A 13: \A 14: /*9px*/\A 15: {font-size:0.9em;}\A 16: \A 17: /* 10px */ \A 18: {font-size:1.0em;}\A 19: \A 20: /* 11px */"; }
+  content: "Syntax error: Invalid CSS after \"/*9px*/\": expected selector or at-rule, was \"{font-size:0.9em;}\"\A         on line 15 of /Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss\A \A 10: }\A 11: \A 12: /* -------------- FONT SIZES -------------- */\A 13: \A 14: /*9px*/\A 15: {font-size:0.9em;}\A 16: \A 17: /* 10px */ \A 18: {font-size:1.0em;}\A 19: \A 20: /* 11px */"; }
