--- a/public/stylesheets/typography.css
+++ b/public/stylesheets/typography.css
@@ -1,85 +1,162 @@
-/*
-Syntax error: Invalid CSS after "/*9px*/": expected selector or at-rule, was "{font-size:0.9em;}"
-        on line 15 of /Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss
+/* -------------- TYPOGRAPHY -------------- */
+/* Font size, family, style etc */
 
-10: }
-11: 
-12: /* -------------- FONT SIZES -------------- */
-13: 
-14: /*9px*/
-15: {font-size:0.9em;}
-16: 
-17: /* 10px */ 
-18: {font-size:1.0em;}
-19: 
-20: /* 11px */
+/* -------------- FONT FAMILY -------------- */
 
-Backtrace:
-/Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss:15
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:898:in `expected'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:841:in `expected'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/scss/parser.rb:27:in `parse'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:319:in `_to_tree'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:291:in `_render'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/util.rb:298:in `silence_sass_warnings'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/engine.rb:239:in `render'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:319:in `update_stylesheet'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:181:in `update_stylesheets'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `each'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:175:in `update_stylesheets'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `each'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/compiler.rb:173:in `update_stylesheets'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:81:in `update_stylesheets'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin.rb:54:in `check_for_updates'
-/opt/local/lib/ruby/gems/1.8/gems/sass-3.1.1/lib/sass/../sass/plugin/rack.rb:51:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/best_standards_support.rb:17:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/head.rb:14:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/methodoverride.rb:24:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/params_parser.rb:21:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/flash.rb:182:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/session/abstract_store.rb:149:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/cookies.rb:295:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:46:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/activesupport-3.0.3/lib/active_support/callbacks.rb:415:in `_run_call_callbacks'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/callbacks.rb:44:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/sendfile.rb:107:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/remote_ip.rb:48:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/show_exceptions.rb:46:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/rack/logger.rb:13:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/runtime.rb:17:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/activesupport-3.0.3/lib/active_support/cache/strategy/local_cache.rb:72:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/dragonfly-0.7.7/lib/dragonfly/middleware.rb:16:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `synchronize'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/lock.rb:11:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/actionpack-3.0.3/lib/action_dispatch/middleware/static.rb:30:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:168:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:77:in `send'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/application.rb:77:in `method_missing'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/rack/log_tailer.rb:14:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/content_length.rb:13:in `call'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/handler/webrick.rb:52:in `service'
-/opt/local/lib/ruby/1.8/webrick/httpserver.rb:104:in `service'
-/opt/local/lib/ruby/1.8/webrick/httpserver.rb:65:in `run'
-/opt/local/lib/ruby/1.8/webrick/server.rb:173:in `start_thread'
-/opt/local/lib/ruby/1.8/webrick/server.rb:162:in `start'
-/opt/local/lib/ruby/1.8/webrick/server.rb:162:in `start_thread'
-/opt/local/lib/ruby/1.8/webrick/server.rb:95:in `start'
-/opt/local/lib/ruby/1.8/webrick/server.rb:92:in `each'
-/opt/local/lib/ruby/1.8/webrick/server.rb:92:in `start'
-/opt/local/lib/ruby/1.8/webrick/server.rb:23:in `start'
-/opt/local/lib/ruby/1.8/webrick/server.rb:82:in `start'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/handler/webrick.rb:13:in `run'
-/opt/local/lib/ruby/gems/1.8/gems/rack-1.2.1/lib/rack/server.rb:213:in `start'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands/server.rb:65:in `start'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:30
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:27:in `tap'
-/opt/local/lib/ruby/gems/1.8/gems/railties-3.0.3/lib/rails/commands.rb:27
-script/rails:6:in `require'
-script/rails:6
+body, textarea, input {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 62.5%;
+  word-spacing:2px;
+}
+
+/* -------------- FONT SIZES -------------- */
+
+/*9px*/
+{font-size:0.9em;}
+
+/* 10px */ 
+{font-size:1.0em;}
+
+/* 11px */
+{font-size:1.0em;}
+
+/* 12px */
+p{font-size:1.2em;}
+
+/* 13px */
+{font-size:1.3em;}
+
+/* 14px */
+{font-size:1.4em;}
+
+/* 15px */
+{font-size:1.5em;}
+
+/* 16px */
+{font-size:1.6em;}
+
+/* 17px */
+{font-size:1.7em;}
+
+/* 18px */
+{font-size:1.8em;}
+
+/* 19px */
+{font-size:1.9em;}
+
+/* 20px */
+h4, h5, h6{font-size:2.0em;}
+
+/* 21px */
+{font-size:2.1em;}
+
+/* 22px */
+{font-size:2.2em;}
+
+/* 23px */
+{font-size:2.3em;}
+
+/* 24px */
+h3{font-size:2.4em;}
+
+/* 30px */
+h2{font-size:3em;}
+
+/*36px */
+h1{font-size:3.6em;}
+
+/* -------------- FONT STYLING -------------- */
+
+/* Bold */
+{font-weight: bold;}
+
+/* Italic */
+{font-style: italic;}
+
+/* Underline */
+{text-decoration: underline;}
+
+/* Normal */
+{font-weight: normal !important;font-style: normal !important;}
+
+{font-weight: normal !important;}
+
+{font-style: normal !important;}
+
+/* -------------- LINE HEIGHT -------------- */
+
+/* -------------- LETTER SPACING -------------- */
+
+/* -------------- WORD SPACING -------------- */
+
+
+
+
+
+
+
+
+
+/* Font stack options - Taken from Starkers by Elliot Jay Stocks - http://starkerstheme.com
+
+	The following represents a list of font stacks, as recommended by Nathan Ford in
+	http://unitinteractive.com/blog/2008/06/26/better-css-font-stacks/
+
+	I've added inverted commas around the relevant family names to ensure compatibility.
+	p = balanced for paragraphs or body copy
+	t = balanced for headlines or titles
+
+	- - - -
+
+Arial, "Helvetica Neue", Helvetica, sans-serif - p, t
+
+Baskerville, "Times New Roman", Times, serif - p
+Baskerville, "Times, Times New Roman", serif - t
+
+Cambria, Georgia, Times, "Times New Roman", serif - p, t
+"Century Gothic", "Apple Gothic", sans-serif - p, t
+
+Consolas, "Lucida Console", Monaco, monospace - p, t
+
+"Copperplate Light", "Copperplate Gothic Light", serif - p, t
+
+"Courier New", Courier, monospace - p, t
+
+"Franklin Gothic Medium", "Arial Narrow Bold", Arial, sans-serif - p, t
+
+Futura, "Century Gothic", "Apple Gothic", sans-serif - p, t
+
+Garamond, "Hoefler Text", "Times New Roman", Times, serif - p
+Garamond, "Hoefler Text", Palatino, "Palatino Linotype", serif - t
+
+Geneva, "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif - p
+Geneva, Verdana, "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif - t
+
+Georgia, Palatino, "Palatino Linotype", Times, "Times New Roman", serif - p
+Georgia, Times, "Times New Roman", serif - t
+
+GillSans, Calibri, Trebuchet, sans-serif - p
+GillSans, Trebuchet, Calibri, sans-serif - t
+
+"Helvetica Neue", Arial, Helvetica, sans-serif - p
+Helvetica, "Helvetica Neue", Arial, sans-serif - t
+
+Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif - p, t
+
+"Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif - p, t
+
+Palatino, "Palatino Linotype", Georgia, Times, "Times New Roman", serif - p
+Palatino, "Palatino Linotype", "Hoefler Text", Times, "Times New Roman", serif - t
+
+Tahoma, Geneva, Verdana - p
+Tahoma, Verdana, Geneva - t
+
+Times, "Times New Roman", Georgia, serif - p, t
+
+Trebuchet, "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif - p
+Trebuchet, Tahoma, Arial, sans-serif - t
+
+Verdana, Geneva, Tahoma, sans-serif - p
+Verdana, Tahoma, Geneva, sans-serif - t
+
 */
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Syntax error: Invalid CSS after \"/*9px*/\": expected selector or at-rule, was \"{font-size:0.9em;}\"\A         on line 15 of /Users/liamrichardson/Sites/noodall-ui/public/stylesheets/sass/typography.scss\A \A 10: }\A 11: \A 12: /* -------------- FONT SIZES -------------- */\A 13: \A 14: /*9px*/\A 15: {font-size:0.9em;}\A 16: \A 17: /* 10px */ \A 18: {font-size:1.0em;}\A 19: \A 20: /* 11px */"; }
