--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -302,8 +302,8 @@ form#uploader {
 /* PAGINATION */
 
 .pagination {
-        clear:both;
-        margin:10px 0;
+				float:left;
+        margin:15px 0;
         height:26px;
 }
 
@@ -772,7 +772,39 @@ li.multi-file .file-detail img {clear:both;float:left;}
 }
 
 
+/* -------------- Admin filtering -------------- */
+#form-filter {
+  float: right;
+  margin: 0px 0 10px 0;
+  width: 321px;
+}
 
+#form-filter form input[type="text"] {
+  float:left;
+  margin: 0 20px 0 0;
+  width: 200px;
+  background: none repeat scroll 0 0 #FFFFFF;
+  border: 1px solid #C2C2C2;
+  padding: 8px;
+}
+
+#form-filter form input[type="submit"] {
+  float:left;
+  width: 80px;
+  background: none repeat scroll 0 0 #93bf65;
+  border: 5px solid #659132;
+  padding: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: bold;
+  text-transform:uppercase;
+  font-size: 10px;
+  text-shadow: 2px 2px 2px #659132;
+  filter: dropshadow(color=#659132, offx=2, offy=2);
+  margin: 0;
+}
 
 /* -------------- CLEARFIX -------------- */
 
