Updated node list label to Name - to match update to admin_title in noodall-core

--- a/app/views/noodall/admin/nodes/index.html.erb
+++ b/app/views/noodall/admin/nodes/index.html.erb
@@ -40,7 +40,7 @@
  <table border="0" cellspacing="0" cellpadding="0" class="content">
   <thead>
     <tr>
-      <%= sortable_table_header :name => "Title", :sort => "admin_title", :class => 'sort' %>
+      <%= sortable_table_header :name => "Name", :sort => "admin_title", :class => 'sort' %>
       <%= sortable_table_header :name => "Type", :sort => "_type", :class => 'sort' %>
 
       <%# Change 'position' header if we are sorting by position %>
