--- a/public/stylesheets/admin/skin.css
+++ b/public/stylesheets/admin/skin.css
@@ -134,12 +134,12 @@ div#content-table {
         background:#e9e9e9;
 }
 
-table.content {
+div#content-table table.content {
         border:1px solid #c2c2c2;
         background:#fff;
 }
 
-table.content td{
+div#content-table table.content td{
         color:#707070;
 }
 
@@ -147,8 +147,8 @@ a.edit {
         color:#106bab;
 }
 
-table.content td a.child-no,
-table.content td.file a {
+div#content-table table.content td a.child-no,
+div#content-table table.content td.file a {
         color:#707070;
 }
 
@@ -157,43 +157,39 @@ a.edit:hover,
         color:#d4954c;
 }
 
-table.content td a.child-no:hover,
-table.content td.file a:hover {
+div#content-table table.content td a.child-no:hover,
+div#content-table table.content td.file a:hover {
         color:#83b452;
 }
 
 
-table.content thead,
-table.content tfoot,
-table.content thead a,
-table.content tfoot a {
+div#content-table table.content thead,
+div#content-table table.content tfoot,
+div#content-table table.content thead a,
+div#content-table table.content tfoot a {
         background: #4a4747;
         color:#fff;
 }
 
-table.content tr.even {
+div#content-table table.content tr.even {
         background:#fff6d3;
 }
 
-table.content tbody tr:hover {
-        background:#e4edff;
+div#content-table table.content tbody tr:hover {
+        background:#e4edff !important;
 }
 
-table.content tr.active {
-        background:#bae8b4!important;
-}
-
-table.content th {
+div#content-table table.content th {
         border-left:1px solid #686666;
 }
 
-table.content td {
+div#content-table table.content td {
         border-left:1px solid #D3D3D3 !important;
 }
 
-table.content th:first-child,
-table.content td:first-child,
-table.content td.down {
+div#content-table table.content th:first-child,
+div#content-table table.content td:first-child,
+div#content-table table.content td.down {
         border-left:none !important;
 }
 
@@ -362,7 +358,7 @@ a.edit, span.edit {
 }
 
   a.edit:hover, span.edit:hover {
-          background-position: right -370px;
+          background-position: right -68px;
   }
 
 a.delete, span.delete {
@@ -397,8 +393,8 @@ span.check {
         background:url(/images/admin/check.png) no-repeat -1px -4px;
 }
 
-span.hidden {
-        background:url(/images/admin/hidden.png) no-repeat -1px -4px;
+span.draft {
+        background:url(/images/admin/draft.png) no-repeat -1px -4px;
 }
 
 a.child, a.add{
@@ -417,9 +413,7 @@ a.page_up:hover,
 a.page_down:hover,
 a.child:hover,
 a.add:hover,
-a.download:hover,
-a.spam:hover
- {
+a.download:hover {
         background-position: -1px -36px;
 }
 
@@ -534,7 +528,7 @@ table#node_body_tbl,
   cursor:help;
 }
 
-.tooltip {
+#content form .fixed-form span.tooltip {
         background:url(/images/admin/info.png) no-repeat center center;
         cursor:help;
 }
@@ -638,7 +632,7 @@ a.page_down,
 a.show,
 a.add,
 span.check,
-span.hidden,
+span.draft,
 a.child,
 .form-save,
 .form-delete,
@@ -650,10 +644,7 @@ a.child,
 ul.choices li a,
 a.download,
 .edit-item,
-a.change,
-a.spam, span.spam,
-.fixed-form input#hide,
-#content form .fixed-form a#versions-button {
+a.change {
         overflow: hidden;
         text-align: left;
         display: block;
