--- a/public/stylesheets/admin/typography.css
+++ b/public/stylesheets/admin/typography.css
@@ -8,6 +8,10 @@ body, textarea {
   font-family: 'Arial', verdana, sans-serif;
 }
 
+/*#content h1, #header h1{
+}*/
+
+
 /* -------------- FONT SIZES -------------- */
 
   /* 10px */
