added body.create to extra padding rulez

--- a/public/stylesheets/admin/layout.css
+++ b/public/stylesheets/admin/layout.css
@@ -12,7 +12,8 @@ body {
 
 body.show #content,
 body.edit #content,
-body.new #content {
+body.new #content,
+body.create #content {
         margin:20px;
         padding:0 0 130px;
 }
